--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,44 @@
 
 .container{
     width: 920px;
-    margin: auto;
+    margin: 0 auto;
 }
 
 header .container{
-    height: 90px;
-    background-color: rgb(229,121,230);
+    height: fit-content;
+    /* background-color: rgb(229,121,230); */
     margin: var(--margin) auto;
+}
+
+header .container img{
+    height: 60px;
+    padding-right: 14px;
+    border-right: 1px solid lightgrey;
+}
+
+nav.container{
+    margin: 35px auto 30px;
+}
+
+ul{
+    list-style: none;
+    margin-left: -8px;
+}
+
+nav ul li{
+    display: inline-block;
+}
+
+nav ul li a{
+    font-family: 'Montserrat', sans-serif;
+    text-decoration: none;
+    color: lightgrey;
+    padding: 5px 8px;
+}
+
+nav ul li a:hover{
+    color: rgb(255, 255, 255);
+    background-color: lightgrey;
 }
 
 .hero-section{
