--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,36 @@
     clear: both;
 }
 
+.font-family{
+    font-family: 'Montserrat', sans-serif;
+}
+
+.grey-text{
+    color: lightgrey;
+}
+
+/********************************************************************/
+
+h1{
+    font-size: 35px;
+    font-weight: 700;
+}
+
+h3{ 
+    font-weight: lighter;
+    margin-bottom: 10px;
+}
+
+/********************************************************************/
+
 .container{
     width: 920px;
     margin: 0 auto;
+    position: relative;
+/*     background-color: white; */
 }
+
+/********************************************************************/
 
 header .container{
     height: fit-content;
@@ -47,7 +73,6 @@ nav ul li{
 nav ul li a{
     font-family: 'Montserrat', sans-serif;
     text-decoration: none;
-    color: lightgrey;
     padding: 5px 8px;
 }
 
@@ -56,24 +81,81 @@ nav ul li a:hover{
     background-color: lightgrey;
 }
 
-.hero-section{
-    background-color: rgb(225,214,122);
-    margin: calc(2*var(--margin)) auto;
-    height: 400px;
+/********************************************************************/
+
+.hero-section img{
+    width: 100%;
+    position: absolute;
+    top: -120px
 }
 
+.hero-section::after{
+    content: "";
+    background-color: rgba(0, 0, 0, .3);
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+}
+
+.hero-section{
+    height: 400px;
+    margin: calc(2*var(--margin)) auto;
+    overflow: hidden;
+    border-radius: 10px;
+    background-color: black;
+    position: relative;
+}
+
+.hero-text{
+    width: 50%;
+    position: absolute;
+    bottom: 55px;
+    left: 50px;
+    color: white;
+    font-size: 15px;
+}
+
+.thin-and-high{
+    font-size: 27px;
+    font-weight: lighter;
+}
 
 .main-container-header{
     height: 60px;
-    background-color: rgb(171,207,231);
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
 .column{
-    background-color: rgb(171,207,231);
     width: 25%;
     float: left;
-    height: 400px;
+    height: fit-content;
+}
+
+.column-image{
+    height: 150px;
+    background-size: cover;
+    overflow: hidden;
+    position: relative;
+    border-radius: 8px;
+    margin-bottom: 10px;
+}
+
+.column-image::after{
+    content: "";
+    background-color: rgba(0, 0, 0, .3);
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+}
+
+.column-image img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 
 .center-column{
@@ -83,11 +165,19 @@ nav ul li a:hover{
 
 .main-container{
     padding-bottom: 20px;
-    background-color: rgb(0, 134, 255);
+    /* background-color: rgb(0, 134, 255); */
 }
 
+/********************************************************************/
+
+
 footer .container{
+    text-align: center;
     height: 50px;
-    background-color: rgb(136,1,254);
+    /* background-color: rgb(136,1,254); */
     margin-top: 20px;
+}
+
+.icon{
+    color: red;
 }
